# brickbeam

./: CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: ci.yaml  coverage.yaml  release-plz.yml
examples/: combo.rs  direct.rs  extended.rs  speed.rs
src/: errors.rs  lib.rs
src/controller/: combo_direct.rs  combo_speed.rs  extended.rs  factory.rs  mod.rs  speed.rs
src/device/: api.rs  cir.rs  emulator.rs  mod.rs
src/protocols/: combo_direct.rs  combo_pwm.rs  extended.rs  mod.rs  single_output.rs
tests/: integrational_test.rs
